# weather

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  pyproject.toml
src/resources/: example_3h_5d_forecast.json  example_current_weather.json  test_response.json
src/waf/: __init__.py
src/waf/scripts/: cli.py
src/weather/: __init__.py  console.py  weather_api.py
src/weather/app/: app.py
src/weather/app/static/: style.css
src/weather/app/templates/: index.html
src/weather/scripts/: cli.py
