[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=80", "wheel" ]

[project]
name = "waf"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.2",
    "rich>=15.0.0",
]
scripts.weather = "waf.scripts.cli:weather"

[tool.setuptools]
packages.find.where = [ "src" ]
include-package-data = true

[tool.uv]
required-version = ">=0.11.0"

[tool.ruff]
target-version = "py313"
line-length = 120
fix-only = true
lint.select = [ "ALL" ]
lint.ignore = [ "COM812", "D203", "D212" ]
lint.isort.force-single-line = true

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
