[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=80" ]

[project]
name = "weather"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
license-files = [ "LICENSE" ]
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "click>=8.4.2",
  "dotenv>=0.9.9",
  "requests>=2.34.2",
  "rich>=15",
]
scripts.weather = "weather.scripts.cli:weather"

[tool.setuptools]
packages.find.where = [ "src" ]
include-package-data = true

[tool.uv]
required-version = ">=0.11.0"

[tool.ruff]
target-version = "py313"
line-length = 120
fix-only = true
lint.select = [ "ALL" ]
lint.ignore = [ "COM812", "D203", "D212" ]
lint.isort.force-single-line = true

[tool.mypy]
ignore_missing_imports = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
strict_equality = true
warn_unused_configs = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
